[gd_scene load_steps=11 format=3 uid="uid://cnx5ho24c13vj"]

[ext_resource type="Script" path="res://Game/Enemies/EnemyTypeScripts/EnemyType1.gd" id="1_pcuox"]
[ext_resource type="Texture2D" uid="uid://c7iegca5c3lnd" path="res://assets/enemies/Skeleton/SkeletonNoShadow/1stSkeletonNoShadow.png" id="2_i8p0b"]
[ext_resource type="AudioStream" uid="uid://cj1imoycxevqm" path="res://assets/SoundEffects/hitHurt (1).wav" id="2_sa6og"]
[ext_resource type="Texture2D" uid="uid://erbf0ip4oxyl" path="res://assets/enemies/Skeleton/SkeletonNoShadow/2ndSkeletonNoShadow.png" id="3_tk352"]
[ext_resource type="Texture2D" uid="uid://cltgm8xjy3yg4" path="res://assets/enemies/Skeleton/SkeletonNoShadow/3rdShadowNoShadow.png" id="4_8iowv"]
[ext_resource type="Texture2D" uid="uid://cuevr7i3xi3iv" path="res://assets/enemies/Skeleton/SkeletonNoShadow/4thShadowNoShadow.png" id="5_irqws"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cfjut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i8p0b")
}, {
"duration": 1.0,
"texture": ExtResource("3_tk352")
}, {
"duration": 1.0,
"texture": ExtResource("4_8iowv")
}, {
"duration": 1.0,
"texture": ExtResource("5_irqws")
}],
"loop": true,
"name": &"default",
"speed": 4.5
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p6g2v"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1l2sv"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dcdo3"]
radius = 12.0

[node name="CommonShooter" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_pcuox")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.0920027, 0.0989361)
sprite_frames = SubResource("SpriteFrames_cfjut")
autoplay = "default"
frame_progress = 0.121866

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.1, 1.1)
shape = SubResource("CircleShape2D_p6g2v")

[node name="ChangeDirection" type="Area2D" parent="." groups=["Enemy"]]
scale = Vector2(1.05, 1.05)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeDirection"]
shape = SubResource("CircleShape2D_1l2sv")

[node name="HitBox" type="Area2D" parent="." groups=["Enemy"]]
scale = Vector2(1.1, 1.1)
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_dcdo3")

[node name="Timer" type="Timer" parent="."]

[node name="Bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_sa6og")
bus = &"SoundFX"

[connection signal="area_entered" from="ChangeDirection" to="." method="_on_enemytype1_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_shoot_timer_timeout"]
